# GraphColoring

./: CMakeLists.txt
include/: ConsoleInterface.hpp  GraphSolver.hpp  PerformanceTimer.hpp
src/: ConsoleInterface.cpp  GraphSolver.cpp  PerformanceTimer.cpp  main.cpp
